# opencl-tests

./: CMakeLists.txt  config.hpp.in
simple/: kernel.cl  simple.cpp  util.hpp
